missing exception checks in arrayProtoFuncReverse https://bugs.webkit.org/show_bug.cgi?id=159319 <rdar://problem/27083696>

Reviewed by Filip Pizlo.

* runtime/ArrayPrototype.cpp:
(JSC::arrayProtoFuncToString):
(JSC::arrayProtoFuncReverse):



Canonical link: https://commits.webkit.org/177448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202714 268f45cc-cd09-0410-ab3c-d52691b4dbfc